pfe-cta-bug-fixes remove unnecessary interpolation syntax, spacing cleanup, and use color function instead of fallback,

--- a/elements/pfe-cta/src/_pfe-cta--global.scss
+++ b/elements/pfe-cta/src/_pfe-cta--global.scss
@@ -7,43 +7,43 @@
   }
   pfe-cta a {
     display: inline-block;
-    color: pfe-fallback(ui-link);
+    color: pfe-color(ui-link);
   }
   pfe-cta a:visited {
-    color: pfe-fallback(ui-link);
+    color: pfe-color(ui-link);
   }
   pfe-cta a:hover {
-    color: pfe-fallback(ui-link);
+    color: pfe-color(ui-link);
   }
   pfe-cta a:focus {
-    color: pfe-fallback(ui-link);
+    color: pfe-color(ui-link);
   }
   pfe-cta[priority] {
-    background: pfe-fallback(surface--darker--text) !important;
-    border-color: pfe-fallback(surface--darker--text) !important;
+    background: pfe-color(surface--darker--text) !important;
+    border-color: pfe-color(surface--darker--text) !important;
   }
   pfe-cta[priority] a {
     padding: 16px 32px;
     text-decoration: none;
-    color: pfe-fallback(surface--lightest--text);
+    color: pfe-color(surface--lightest--text);
   }
   pfe-cta[priority] a:visited {
-    color: pfe-fallback(surface--lightest--text);
+    color: pfe-color(surface--lightest--text);
   }
   pfe-cta[priority] a:hover,
   pfe-cta[priority] a:focus {
-    color: pfe-fallback(ui-link);
+    color: pfe-color(ui-link);
   }
   pfe-cta[priority="primary"] {
-    background: pfe-fallback(surface--accent) !important;
-    border-color: pfe-fallback(surface--accent) !important;
+    background: pfe-color(surface--accent) !important;
+    border-color: pfe-color(surface--accent) !important;
   }
   pfe-cta[priority="primary"] a,
   pfe-cta[priority="primary"] a:visited {
-    color: pfe-fallback(surface--darker--text);
+    color: pfe-color(surface--darker--text);
   }
   pfe-cta[priority="primary"] a:hover,
   pfe-cta[priority="primary"] a:focus {
-    color: pfe-fallback(surface--border);
+    color: pfe-color(surface--border);
   }
 }
